--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <link
       rel="icon"
       type="image/png"
-      href="assets/images/favicon.png?v=3f2871f2"
+      href="assets/images/favicon.png"
     />
     <link
       rel="apple-touch-icon"
-      href="assets/images/apple-touch-icon.png?v=3f2871f2"
+      href="assets/images/apple-touch-icon.png"
     />
     <style>
       html,
@@ -1731,7 +1731,7 @@
                         background-repeat: no-repeat;
                       "
                       ><img
-                        src="assets/images/image03.gif?v=3f2871f2"
+                        src="assets/images/image03.gif"
                         data-src="done"
                         alt=""
                         style="opacity: 1"
@@ -1828,7 +1828,7 @@
                         background-repeat: no-repeat;
                       "
                       ><img
-                        src="assets/images/image02.gif?v=3f2871f2"
+                        src="assets/images/image02.gif"
                         data-src="done"
                         alt=""
                         style="opacity: 1"
@@ -1849,7 +1849,7 @@
                     style="opacity: 0; transform: scale(0.94375)"
                   >
                     <span class="frame"
-                      ><img src="assets/images/image04.jpg?v=3f2871f2" alt=""
+                      ><img src="assets/images/image04.jpg" alt=""
                     /></span>
                   </div>
                 </div>
@@ -1900,7 +1900,7 @@
                     style="opacity: 0; transform: scale(0.94375)"
                   >
                     <span class="frame"
-                      ><img src="assets/images/image01.jpg?v=3f2871f2" alt=""
+                      ><img src="assets/images/image01.jpg" alt=""
                     /></span>
                   </div>
                 </div>
